--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="./style/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Instrument+Sans:ital,wght@0,400..700;1,400..700&family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Instrument+Sans:ital,wght@0,400..700;1,400..700&family=Space+Grotesk:wght@300..700&display=swap"
+        rel="stylesheet">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -20,6 +22,77 @@
 
 <body>
     <!-- Navbar -->
+    <nav class="navbar fixed-top navbar-expand-lg">
+        <div class="container-fluid">
+            <div class="container-navbar-brand">
+                <a class="navbar-brand" href="#"><img
+                        src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/01.Logos/logo.png?raw=true"
+                        alt="Logo de Mac Master Importadores, expertos en tornillería y soluciones industriales">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            </div>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Quienes Somos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Productos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contáctenos</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!-- hero image -->
+    <section id="heroimage">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="content-heroimage col-xxl-10 offset-xxl-1">
+                    <div class="heroimage-title col-lg-6 col-xxl-5">
+                        <div class="title content">
+                            <h1>Fabricación especializada
+                                de tornillería y suministro
+                                de resinas</h1>
+                            <p>Compromiso, diligencia y alta calidad</p>
+                            <p>Contamos con una línea completa de adhesivos, herramientas, tornillería, abrasivos y más.
+                                Distribuimos productos de alta calidad para optimizar tus procesos y resultados.</p>
+                            <a class="btn btn-primary" href="#">Explora nuestros Productos</a>
+                        </div>
+                    </div>
+                    <div class="heroimage-data">
+                        <div class="data-a">
+                            <p>Distribuidores oficiales</p>
+                            <div class="data-image">
+                                <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/01.Logos/Grainger.png?raw=true" alt="Logo Greinger">
+                            </div>
+                        </div>
+                        <div class="data-b">
+                            <div class="data-image">
+                                <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/02.Hero/imgs.png?raw=true" alt="imagen en circulo de personas">
+                            </div>
+                            <p>Con la confianza de más de 3 millones de clientes</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- FAB -->
+    <div class="fixed-bottom">
+        <button type="button" class="btn"
+            onclick="window.open('https://wa.me/573177899482?text=Hola%2C%20estoy%20interesado%20en%20sus%20productos%20de%20tornillería%20y%20resinas.%20¿Podrían%20brindarme%20más%20información%3F', '_blank')"><img
+                src="https://github.com/ivankstro7/Cronopioneuro/blob/main/assets/Extended%20FAB.png?raw=true"
+                alt="icono de whatsapp">
+        </button>
+    </div>
 
 </body>
 
