add brands html&css

--- a/index.html
+++ b/index.html
@@ -70,15 +70,53 @@
                         <div class="data-a">
                             <p>Distribuidores oficiales</p>
                             <div class="data-image">
-                                <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/01.Logos/Grainger.png?raw=true" alt="Logo Greinger">
+                                <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/01.Logos/Grainger.png?raw=true"
+                                    alt="Logo Greinger">
                             </div>
                         </div>
                         <div class="data-b">
                             <div class="data-image">
-                                <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/02.Hero/imgs.png?raw=true" alt="imagen en circulo de personas">
+                                <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/02.Hero/imgs.png?raw=true"
+                                    alt="imagen en circulo de personas">
                             </div>
                             <p>Con la confianza de más de 3 millones de clientes</p>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- brands -->
+    <section id="brand">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="container-brand">
+                    <span class="badge">Marcas aliadas</span>
+                    <div class="brand-grid">
+                        <div class="brand-img"><img
+                                src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/03.marcas/Grainger.png?raw=true"
+                                alt="logo"></div>
+                        <div class="brand-img"><img
+                                src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/03.marcas/logo2.png?raw=true"
+                                alt="logo"></div>
+                        <div class="brand-img"><img
+                                src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/03.marcas/logo3.png?raw=true"
+                                alt="logo"></div>
+                        <div class="brand-img"><img
+                                src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/03.marcas/logo4.png?raw=true"
+                                alt="logo"></div>
+                        <div class="brand-img"><img
+                                src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/03.marcas/logo5.png?raw=true"
+                                alt="logo"></div>
+                        <div class="brand-img"><img
+                                src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/03.marcas/logo6.png?raw=true"
+                                alt="logo"></div>
+                        <div class="brand-img"><img
+                                src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/03.marcas/logo7.png?raw=true"
+                                alt="logo"></div>
+                        <div class="brand-img"><img
+                                src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/03.marcas/logo8.png?raw=true"
+                                alt="logo"></div>
                     </div>
                 </div>
             </div>
