Add products section

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="row">
                 <div class="content-heroimage col-xxl-10 offset-xxl-1">
                     <div class="heroimage-title col-lg-6 col-xxl-5">
-                        <div class="title content">
+                        <div class="title">
                             <h1>Fabricación especializada
                                 de tornillería y suministro
                                 de resinas</h1>
@@ -118,6 +118,58 @@
                                 src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/03.marcas/logo8.png?raw=true"
                                 alt="logo"></div>
                     </div>
+                    <p>Es un honor para nosotros asociarnos con clientes visionarios que nos desafían a innovar y
+                        sobresalir.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- products -->
+    <section id="products">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="container-products">
+                    <span class="badge">Nuestros productos</span>
+                    <div class="title-description">
+                        <h2>Productos Industriales de Alta Calidad
+                            para Mantenimiento y Producción</h2>
+                        <p>Explora nuestras líneas de productos diseñadas para mantener la continuidad operativa y la
+                            eficiencia en todo tipo de entornos productivos.</p>
+                    </div>
+                    <div class="grid-products">
+                        <div class="card">
+                            <img src="" alt="">
+                            <div class="card-title">
+                                <h3>Tornillería</h3>
+                                <p>Amplia gama de tornillos, tuercas
+                                    y fijaciones para múltiples usos.</p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <img src="" alt="">
+                            <div class="card-title">
+                                <h3>Abrasivos</h3>
+                                <p>Discos, lijas y herramientas abrasivas
+                                    para un acabado perfecto.</p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <img src="" alt="">
+                            <div class="card-title">
+                                <h3>Adhesivos y Sellantes</h3>
+                                <p>Soluciones de pegado y sellado
+                                    industrial para todo tipo de superficies.</p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <img src="" alt="">
+                            <div class="card-title">
+                                <h3>Resina y Fibra de Vidrio</h3>
+                                <p>Materiales resistentes y duraderos para reparaciones estructurales.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <a class="btn btn-primary" href="#">Explora nuestros Productos</a>
                 </div>
             </div>
         </div>
