add about section

--- a/index.html
+++ b/index.html
@@ -138,7 +138,8 @@
                     </div>
                     <div class="grid-products">
                         <div class="card">
-                            <img src="" alt="">
+                            <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/04.products/torniller%C3%ADa.png?raw=true"
+                                alt="">
                             <div class="card-title">
                                 <h3>Tornillería</h3>
                                 <p>Amplia gama de tornillos, tuercas
@@ -146,7 +147,8 @@
                             </div>
                         </div>
                         <div class="card">
-                            <img src="" alt="">
+                            <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/04.products/abrasivos.png?raw=true"
+                                alt="">
                             <div class="card-title">
                                 <h3>Abrasivos</h3>
                                 <p>Discos, lijas y herramientas abrasivas
@@ -154,7 +156,8 @@
                             </div>
                         </div>
                         <div class="card">
-                            <img src="" alt="">
+                            <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/04.products/adhesivos.png?raw=true"
+                                alt="">
                             <div class="card-title">
                                 <h3>Adhesivos y Sellantes</h3>
                                 <p>Soluciones de pegado y sellado
@@ -162,7 +165,8 @@
                             </div>
                         </div>
                         <div class="card">
-                            <img src="" alt="">
+                            <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/04.products/resina.png?raw=true"
+                                alt="">
                             <div class="card-title">
                                 <h3>Resina y Fibra de Vidrio</h3>
                                 <p>Materiales resistentes y duraderos para reparaciones estructurales.</p>
@@ -170,6 +174,52 @@
                         </div>
                     </div>
                     <a class="btn btn-primary" href="#">Explora nuestros Productos</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- FAB -->
+    <section id="about">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="container-about">
+                    <span class="badge">Quienes somos</span>
+                    <div class="title-description">
+                        <div class="heading">
+                            <h2>Puntos clave que definen nuestro éxito
+                                para Mantenimiento y Producción</h2>
+                            <p>Somos una compañía reconocida por ofrecer un portafolio amplio y versátil para la
+                                industria. Nos destacamos por nuestros tiempos de entrega óptimos, atención
+                                personalizada y un equipo comprometido con brindar un servicio de calidad.</p>
+                        </div>
+                        <a class="btn btn-primary" href="#">Acerca de nosotros</a>
+                    </div>
+                    <div class="grid-stats">
+                        <div class="card">
+                            <h3>+10 años</h3>
+                            <div class="card-title">
+                                <h4>Trayectoria</h4>
+                                <p>Más de una década impulsando
+                                    soluciones industriales en todo el país.</p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <h3>500+</h3>
+                            <div class="card-title">
+                                <h4>Productos disponibles</h4>
+                                <p>Un catálogo robusto y actualizado para cubrir múltiples necesidades
+                                    del sector.</p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <h3>98%+</h3>
+                            <div class="card-title">
+                                <h4>Satisfacción de clientes</h4>
+                                <p>Nuestros clientes nos recomiendan por nuestra atención, servicio y
+                                    cumplimiento.</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
