add gallery section

--- a/index.html
+++ b/index.html
@@ -224,6 +224,33 @@
             </div>
         </div>
     </section>
+    <!-- gallery -->
+    <section id="gallery">
+        <div class="container">
+            <div class="row">
+                <div class="container-gallery">
+                    <div class="grid">
+
+                    </div>
+                    <div class="grid">
+
+                    </div>
+                    <div class="banner-cta">
+                        <div class="title-description">
+                            <h2>¿Listo para cotizar sin compromiso?</h2>
+                            <p>En Mac Master Importadores estamos para ayudarte a encontrar justo lo que
+                                tu negocio necesita. Escribinos y recibí asesoría personalizada en minutos.</p>
+                            <button type="button" class="btn"
+                                onclick="window.open('https://wa.me/573177899482?text=Hola%2C%20estoy%20interesado%20en%20sus%20productos%20de%20tornillería%20y%20resinas.%20¿Podrían%20brindarme%20más%20información%3F', '_blank')">
+                                Habla con un asesor
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <!-- FAB -->
     <div class="fixed-bottom">
