--- a/index.html
+++ b/index.html
@@ -230,10 +230,20 @@
             <div class="row">
                 <div class="container-gallery">
                     <div class="grid">
-
+                        <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/05.gallery/img.png?raw=true"
+                            alt="">
+                        <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/05.gallery/img-1.png?raw=true"
+                            alt="">
+                        <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/05.gallery/img-2.png?raw=true"
+                            alt="">
                     </div>
                     <div class="grid">
-
+                        <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/05.gallery/img-3.png?raw=true"
+                            alt="">
+                        <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/05.gallery/img-4.png?raw=true"
+                            alt="">
+                        <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/05.gallery/img-5.png?raw=true"
+                            alt="">
                     </div>
                     <div class="banner-cta">
                         <div class="title-description">
@@ -244,6 +254,13 @@
                                 onclick="window.open('https://wa.me/573177899482?text=Hola%2C%20estoy%20interesado%20en%20sus%20productos%20de%20tornillería%20y%20resinas.%20¿Podrían%20brindarme%20más%20información%3F', '_blank')">
                                 Habla con un asesor
                             </button>
+                        </div>
+                        <div class="data">
+                            <div class="data-image">
+                                <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/02.Hero/imgs.png?raw=true"
+                                    alt="imagen en circulo de personas">
+                            </div>
+                            <p>Con la confianza de más de 3 millones de clientes</p>
                         </div>
                     </div>
                 </div>
