--- a/index.html
+++ b/index.html
@@ -267,7 +267,61 @@
             </div>
         </div>
     </section>
-
+    <!-- footer -->
+    <footer id="footer">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="container-footer">
+                    <div class="footer-options">
+                        <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/01.Logos/logo.png?raw=true"
+                            alt="Logo de Mac Master Importadores, expertos en tornillería y soluciones industriales">
+                        <div class="options">
+                            <ul class="navbar-nav">
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Inicio</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Quienes Somos</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Productos</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Contáctenos</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <p>Copyright © 2025 Mac Master Importadores - Todos los derechos reservados.</p>
+                    </div>
+                    <div class="footer-data">
+                        <div class="info">
+                            <small>Correo</small>
+                            <a href="mailto:proyectos@macmaster.co">proyectos@macmaster.co</a>
+                        </div>
+                        <div class="info">
+                            <small>Teléfono</small>
+                            <p>(57) 317 789 9482</p>
+                        </div>
+                        <div class="info">
+                            <small>Dirección</small>
+                            <a href="https://maps.app.goo.gl/WE55NxdbZBX4dsTb8" target="_blank" rel="noopener noreferrer">Av. 5c Nte. #46, Cali,
+                                Valle del Cauca, Colombia</a>
+                        </div>
+                        <div class="social-data">
+                            <ul class="navbar-nav">
+                                <li class="nav-item">
+                                    <a class="nav-link" target="_blank" href="https://www.instagram.com/macmasterimport/">Instagram</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" target="_blank" href="https://www.facebook.com/macmasterimport">Facebook</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <!-- FAB -->
     <div class="fixed-bottom">
