--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="row">
                 <div class="content-heroimage col-xxl-10 offset-xxl-1">
                     <div class="heroimage-title col-lg-6 col-xxl-5">
-                        <div class="title">
+                        <div class="title col-md-10">
                             <h1>Fabricación especializada
                                 de tornillería y suministro
                                 de resinas</h1>
@@ -75,7 +75,7 @@
                             </div>
                         </div>
                         <div class="data-b">
-                            <div class="data-image">
+                            <div class="data-image col-sm-2">
                                 <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/02.Hero/imgs.png?raw=true"
                                     alt="imagen en circulo de personas">
                             </div>
@@ -118,7 +118,8 @@
                                 src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/03.marcas/logo8.png?raw=true"
                                 alt="logo"></div>
                     </div>
-                    <p>Es un honor para nosotros asociarnos con clientes visionarios que nos desafían a innovar y
+                    <p class="col-md-8">Es un honor para nosotros asociarnos con clientes visionarios que nos desafían a
+                        innovar y
                         sobresalir.</p>
                 </div>
             </div>
@@ -131,45 +132,50 @@
                 <div class="container-products">
                     <span class="badge">Nuestros productos</span>
                     <div class="title-description">
-                        <h2>Productos Industriales de Alta Calidad
+                        <h2 class="col-md-8 offset-md-2">Productos Industriales de Alta Calidad
                             para Mantenimiento y Producción</h2>
-                        <p>Explora nuestras líneas de productos diseñadas para mantener la continuidad operativa y la
+                        <p class="col-md-8 offset-md-2">Explora nuestras líneas de productos diseñadas para mantener la
+                            continuidad operativa y la
                             eficiencia en todo tipo de entornos productivos.</p>
                     </div>
                     <div class="grid-products">
-                        <div class="card">
-                            <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/04.products/torniller%C3%ADa.png?raw=true"
-                                alt="">
-                            <div class="card-title">
-                                <h3>Tornillería</h3>
-                                <p>Amplia gama de tornillos, tuercas
-                                    y fijaciones para múltiples usos.</p>
+                        <div class="grid-md">
+                            <div class="card">
+                                <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/04.products/torniller%C3%ADa.png?raw=true"
+                                    alt="">
+                                <div class="card-title">
+                                    <h3>Tornillería</h3>
+                                    <p>Amplia gama de tornillos, tuercas
+                                        y fijaciones para múltiples usos.</p>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/04.products/abrasivos.png?raw=true"
+                                    alt="">
+                                <div class="card-title">
+                                    <h3>Abrasivos</h3>
+                                    <p>Discos, lijas y herramientas abrasivas
+                                        para un acabado perfecto.</p>
+                                </div>
                             </div>
                         </div>
-                        <div class="card">
-                            <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/04.products/abrasivos.png?raw=true"
-                                alt="">
-                            <div class="card-title">
-                                <h3>Abrasivos</h3>
-                                <p>Discos, lijas y herramientas abrasivas
-                                    para un acabado perfecto.</p>
+                        <div class="grid-md">
+                            <div class="card">
+                                <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/04.products/adhesivos.png?raw=true"
+                                    alt="">
+                                <div class="card-title">
+                                    <h3>Adhesivos y Sellantes</h3>
+                                    <p>Soluciones de pegado y sellado
+                                        industrial para todo tipo de superficies.</p>
+                                </div>
                             </div>
-                        </div>
-                        <div class="card">
-                            <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/04.products/adhesivos.png?raw=true"
-                                alt="">
-                            <div class="card-title">
-                                <h3>Adhesivos y Sellantes</h3>
-                                <p>Soluciones de pegado y sellado
-                                    industrial para todo tipo de superficies.</p>
-                            </div>
-                        </div>
-                        <div class="card">
-                            <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/04.products/resina.png?raw=true"
-                                alt="">
-                            <div class="card-title">
-                                <h3>Resina y Fibra de Vidrio</h3>
-                                <p>Materiales resistentes y duraderos para reparaciones estructurales.</p>
+                            <div class="card">
+                                <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/04.products/resina.png?raw=true"
+                                    alt="">
+                                <div class="card-title">
+                                    <h3>Resina y Fibra de Vidrio</h3>
+                                    <p>Materiales resistentes y duraderos para reparaciones estructurales.</p>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -178,7 +184,7 @@
             </div>
         </div>
     </section>
-    <!-- FAB -->
+    <!-- about -->
     <section id="about">
         <div class="container-fluid">
             <div class="row">
@@ -196,24 +202,24 @@
                     </div>
                     <div class="grid-stats">
                         <div class="card">
-                            <h3>+10 años</h3>
-                            <div class="card-title">
+                            <h3 class="col-md-6">+10 años</h3>
+                            <div class="card-title col-md-5">
                                 <h4>Trayectoria</h4>
                                 <p>Más de una década impulsando
                                     soluciones industriales en todo el país.</p>
                             </div>
                         </div>
                         <div class="card">
-                            <h3>500+</h3>
-                            <div class="card-title">
+                            <h3 class="col-md-6">500+</h3>
+                            <div class="card-title col-md-5">
                                 <h4>Productos disponibles</h4>
                                 <p>Un catálogo robusto y actualizado para cubrir múltiples necesidades
                                     del sector.</p>
                             </div>
                         </div>
                         <div class="card">
-                            <h3>98%+</h3>
-                            <div class="card-title">
+                            <h3 class="col-md-6">98%+</h3>
+                            <div class="card-title col-md-5">
                                 <h4>Satisfacción de clientes</h4>
                                 <p>Nuestros clientes nos recomiendan por nuestra atención, servicio y
                                     cumplimiento.</p>
@@ -226,7 +232,7 @@
     </section>
     <!-- gallery -->
     <section id="gallery">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
                 <div class="container-gallery">
                     <div class="grid">
@@ -246,7 +252,7 @@
                             alt="">
                     </div>
                     <div class="banner-cta">
-                        <div class="title-description">
+                        <div class="title-description col-md-8">
                             <h2>¿Listo para cotizar sin compromiso?</h2>
                             <p>En Mac Master Importadores estamos para ayudarte a encontrar justo lo que
                                 tu negocio necesita. Escribinos y recibí asesoría personalizada en minutos.</p>
@@ -255,12 +261,12 @@
                                 Habla con un asesor
                             </button>
                         </div>
-                        <div class="data">
-                            <div class="data-image">
+                        <div class="data col-sm-12">
+                            <div class="data-image col-md-2">
                                 <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/02.Hero/imgs.png?raw=true"
                                     alt="imagen en circulo de personas">
                             </div>
-                            <p>Con la confianza de más de 3 millones de clientes</p>
+                            <p class="col-md-10">Con la confianza de más de 3 millones de clientes</p>
                         </div>
                     </div>
                 </div>
@@ -304,16 +310,19 @@
                         </div>
                         <div class="info">
                             <small>Dirección</small>
-                            <a href="https://maps.app.goo.gl/WE55NxdbZBX4dsTb8" target="_blank" rel="noopener noreferrer">Av. 5c Nte. #46, Cali,
+                            <a href="https://maps.app.goo.gl/WE55NxdbZBX4dsTb8" target="_blank"
+                                rel="noopener noreferrer">Av. 5c Nte. #46, Cali,
                                 Valle del Cauca, Colombia</a>
                         </div>
                         <div class="social-data">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link" target="_blank" href="https://www.instagram.com/macmasterimport/">Instagram</a>
+                                    <a class="nav-link" target="_blank"
+                                        href="https://www.instagram.com/macmasterimport/">Instagram</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" target="_blank" href="https://www.facebook.com/macmasterimport">Facebook</a>
+                                    <a class="nav-link" target="_blank"
+                                        href="https://www.facebook.com/macmasterimport">Facebook</a>
                                 </li>
                             </ul>
                         </div>
