--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <nav class="navbar fixed-top navbar-expand-lg">
         <div class="container-fluid">
             <div class="container-navbar-brand">
-                <a class="navbar-brand" href="#"><img
+                <a class="navbar-brand col-lg-6" href="#"><img
                         src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/01.Logos/logo.png?raw=true"
                         alt="Logo de Mac Master Importadores, expertos en tornillería y soluciones industriales">
                 </a>
@@ -35,7 +35,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
             </div>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <div class="collapse navbar-collapse col-lg-6" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" href="#">Quienes Somos</a>
@@ -55,8 +55,8 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="content-heroimage col-xxl-10 offset-xxl-1">
-                    <div class="heroimage-title col-lg-6 col-xxl-5">
-                        <div class="title col-md-10">
+                    <div class="heroimage-title">
+                        <div class="title col-md-10 col-lg-6">
                             <h1>Fabricación especializada
                                 de tornillería y suministro
                                 de resinas</h1>
@@ -92,7 +92,7 @@
             <div class="row">
                 <div class="container-brand">
                     <span class="badge">Marcas aliadas</span>
-                    <div class="brand-grid">
+                    <div class="brand-grid col-lg-8">
                         <div class="brand-img"><img
                                 src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/03.marcas/Grainger.png?raw=true"
                                 alt="logo"></div>
@@ -134,11 +134,11 @@
                     <div class="title-description">
                         <h2 class="col-md-8 offset-md-2">Productos Industriales de Alta Calidad
                             para Mantenimiento y Producción</h2>
-                        <p class="col-md-8 offset-md-2">Explora nuestras líneas de productos diseñadas para mantener la
+                        <p class="col-md-8 offset-md-2 col-lg-6 offset-lg-3">Explora nuestras líneas de productos diseñadas para mantener la
                             continuidad operativa y la
                             eficiencia en todo tipo de entornos productivos.</p>
                     </div>
-                    <div class="grid-products">
+                    <div class="grid-products col-lg-10 offset-lg-1">
                         <div class="grid-md">
                             <div class="card">
                                 <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/04.products/torniller%C3%ADa.png?raw=true"
@@ -190,7 +190,7 @@
             <div class="row">
                 <div class="container-about">
                     <span class="badge">Quienes somos</span>
-                    <div class="title-description">
+                    <div class="title-description col-lg-10 offset-lg-1">
                         <div class="heading">
                             <h2>Puntos clave que definen nuestro éxito
                                 para Mantenimiento y Producción</h2>
@@ -200,10 +200,10 @@
                         </div>
                         <a class="btn btn-primary" href="#">Acerca de nosotros</a>
                     </div>
-                    <div class="grid-stats">
+                    <div class="grid-stats col-lg-10 offset-lg-1">
                         <div class="card">
                             <h3 class="col-md-6">+10 años</h3>
-                            <div class="card-title col-md-5">
+                            <div class="card-title col-md-5 col-lg-6">
                                 <h4>Trayectoria</h4>
                                 <p>Más de una década impulsando
                                     soluciones industriales en todo el país.</p>
@@ -211,7 +211,7 @@
                         </div>
                         <div class="card">
                             <h3 class="col-md-6">500+</h3>
-                            <div class="card-title col-md-5">
+                            <div class="card-title col-md-5 col-lg-6">
                                 <h4>Productos disponibles</h4>
                                 <p>Un catálogo robusto y actualizado para cubrir múltiples necesidades
                                     del sector.</p>
@@ -261,7 +261,7 @@
                                 Habla con un asesor
                             </button>
                         </div>
-                        <div class="data col-sm-12">
+                        <div class="data col-sm-12 col-lg-6">
                             <div class="data-image col-md-2">
                                 <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/02.Hero/imgs.png?raw=true"
                                     alt="imagen en circulo de personas">
