update media jquerys

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
     <!-- Navbar -->
-    <nav class="navbar fixed-top navbar-expand-lg">
+    <nav class="navbar fixed-top navbar-expand-lg col-lg-10 offset-lg-1">
         <div class="container-fluid">
             <div class="container-navbar-brand">
                 <a class="navbar-brand col-lg-6" href="#"><img
@@ -54,9 +54,9 @@
     <section id="heroimage">
         <div class="container-fluid">
             <div class="row">
-                <div class="content-heroimage col-xxl-10 offset-xxl-1">
+                <div class="content-heroimage col-lg-10 offset-lg-1">
                     <div class="heroimage-title">
-                        <div class="title col-md-10 col-lg-6">
+                        <div class="title col-md-10 col-lg-6 col-xl-8 col-xxl-6">
                             <h1>Fabricación especializada
                                 de tornillería y suministro
                                 de resinas</h1>
@@ -92,7 +92,7 @@
             <div class="row">
                 <div class="container-brand">
                     <span class="badge">Marcas aliadas</span>
-                    <div class="brand-grid col-lg-8">
+                    <div class="brand-grid col-lg-8 col-xl-6">
                         <div class="brand-img"><img
                                 src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/03.marcas/Grainger.png?raw=true"
                                 alt="logo"></div>
@@ -118,7 +118,7 @@
                                 src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/03.marcas/logo8.png?raw=true"
                                 alt="logo"></div>
                     </div>
-                    <p class="col-md-8">Es un honor para nosotros asociarnos con clientes visionarios que nos desafían a
+                    <p class="col-md-8 col-xl-5">Es un honor para nosotros asociarnos con clientes visionarios que nos desafían a
                         innovar y
                         sobresalir.</p>
                 </div>
@@ -132,8 +132,8 @@
                 <div class="container-products">
                     <span class="badge">Nuestros productos</span>
                     <div class="title-description">
-                        <h2 class="col-md-8 offset-md-2">Productos Industriales de Alta Calidad
-                            para Mantenimiento y Producción</h2>
+                        <h2 class="col-md-8 offset-md-2 col-xl-8 offset-xl-2">Productos Industriales de Alta Calidad
+                          <br>para Mantenimiento y Producción</h2>
                         <p class="col-md-8 offset-md-2 col-lg-6 offset-lg-3">Explora nuestras líneas de productos diseñadas para mantener la
                             continuidad operativa y la
                             eficiencia en todo tipo de entornos productivos.</p>
@@ -188,12 +188,11 @@
     <section id="about">
         <div class="container-fluid">
             <div class="row">
-                <div class="container-about">
-                    <span class="badge">Quienes somos</span>
+                <div class="container-about col-xl-10 offset-xl-1">                    
                     <div class="title-description col-lg-10 offset-lg-1">
-                        <div class="heading">
-                            <h2>Puntos clave que definen nuestro éxito
-                                para Mantenimiento y Producción</h2>
+                        <div class="heading col-xl-8">
+                            <span class="badge">Quienes somos</span>
+                            <h2>Puntos clave que definen nuestro éxito</h2>
                             <p>Somos una compañía reconocida por ofrecer un portafolio amplio y versátil para la
                                 industria. Nos destacamos por nuestros tiempos de entrega óptimos, atención
                                 personalizada y un equipo comprometido con brindar un servicio de calidad.</p>
@@ -252,9 +251,9 @@
                             alt="">
                     </div>
                     <div class="banner-cta">
-                        <div class="title-description col-md-8">
+                        <div class="title-description col-md-8 col-xl-6">
                             <h2>¿Listo para cotizar sin compromiso?</h2>
-                            <p>En Mac Master Importadores estamos para ayudarte a encontrar justo lo que
+                            <p class="col-xl-10">En Mac Master Importadores estamos para ayudarte a encontrar justo lo que
                                 tu negocio necesita. Escribinos y recibí asesoría personalizada en minutos.</p>
                             <button type="button" class="btn"
                                 onclick="window.open('https://wa.me/573177899482?text=Hola%2C%20estoy%20interesado%20en%20sus%20productos%20de%20tornillería%20y%20resinas.%20¿Podrían%20brindarme%20más%20información%3F', '_blank')">
