--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="collapse navbar-collapse col-lg-6" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Quienes Somos</a>
+                        <a class="nav-link" href="about.html">Quienes Somos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Productos</a>
@@ -118,7 +118,8 @@
                                 src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/03.marcas/logo8.png?raw=true"
                                 alt="logo"></div>
                     </div>
-                    <p class="col-md-8 col-xl-5">Es un honor para nosotros asociarnos con clientes visionarios que nos desafían a
+                    <p class="col-md-8 col-xl-5">Es un honor para nosotros asociarnos con clientes visionarios que nos
+                        desafían a
                         innovar y
                         sobresalir.</p>
                 </div>
@@ -133,8 +134,10 @@
                     <span class="badge">Nuestros productos</span>
                     <div class="title-description">
                         <h2 class="col-md-8 offset-md-2 col-xl-8 offset-xl-2">Productos Industriales de Alta Calidad
-                          <br>para Mantenimiento y Producción</h2>
-                        <p class="col-md-8 offset-md-2 col-lg-6 offset-lg-3">Explora nuestras líneas de productos diseñadas para mantener la
+                            <br>para Mantenimiento y Producción
+                        </h2>
+                        <p class="col-md-8 offset-md-2 col-lg-6 offset-lg-3">Explora nuestras líneas de productos
+                            diseñadas para mantener la
                             continuidad operativa y la
                             eficiencia en todo tipo de entornos productivos.</p>
                     </div>
@@ -188,7 +191,7 @@
     <section id="about">
         <div class="container-fluid">
             <div class="row">
-                <div class="container-about col-xl-10 offset-xl-1">                    
+                <div class="container-about col-xl-10 offset-xl-1">
                     <div class="title-description col-lg-10 offset-lg-1">
                         <div class="heading col-xl-8">
                             <span class="badge">Quienes somos</span>
@@ -253,7 +256,8 @@
                     <div class="banner-cta">
                         <div class="title-description col-md-8 col-xl-6">
                             <h2>¿Listo para cotizar sin compromiso?</h2>
-                            <p class="col-xl-10">En Mac Master Importadores estamos para ayudarte a encontrar justo lo que
+                            <p class="col-xl-10">En Mac Master Importadores estamos para ayudarte a encontrar justo lo
+                                que
                                 tu negocio necesita. Escribinos y recibí asesoría personalizada en minutos.</p>
                             <button type="button" class="btn"
                                 onclick="window.open('https://wa.me/573177899482?text=Hola%2C%20estoy%20interesado%20en%20sus%20productos%20de%20tornillería%20y%20resinas.%20¿Podrían%20brindarme%20más%20información%3F', '_blank')">
