update html files

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                                 industria. Nos destacamos por nuestros tiempos de entrega óptimos, atención
                                 personalizada y un equipo comprometido con brindar un servicio de calidad.</p>
                         </div>
-                        <a class="btn btn-primary" href="#">Acerca de nosotros</a>
+                        <a class="btn btn-primary" href="about.html">Acerca de nosotros</a>
                     </div>
                     <div class="grid-stats col-lg-10 offset-lg-1">
                         <div class="card">
