add heroimage section

--- a/about.html
+++ b/about.html
@@ -51,6 +51,23 @@
         </div>
     </nav>
     <!-- hero image -->
+    <section id="heroimage">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="content-hero">
+                    <h1>En Mac Master Importadores
+                        nuestra prioridad es atenderte</h1>
+                    <picture>
+                        <source media="(min-width:767px)"
+                            srcset="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/02.about/banner.png?raw=true"
+                            alt="Imagen del equipo de trabajo de mac master en su oficina">
+                        <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/02.about/banner.png?raw=true"
+                            alt="Imagen del equipo de trabajo de mac master en su oficina">
+                    </picture>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- about -->
     <section id="about">
         <div class="container-fluid">
