add values section

--- a/about.html
+++ b/about.html
@@ -61,9 +61,64 @@
                         <source media="(min-width:767px)"
                             srcset="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/02.about/banner.png?raw=true"
                             alt="Imagen del equipo de trabajo de mac master en su oficina">
-                        <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/02.about/banner.png?raw=true"
+                        <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/02.about/banner_mobile.png?raw=true"
                             alt="Imagen del equipo de trabajo de mac master en su oficina">
                     </picture>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- mision & vision -->
+    <section id="mision">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="container-mision">
+                    <div class="title">
+                        <span class="badge">Historia y enfoque</span>
+                        <h2>Cómo empezamos y hacia dónde vamos</h2>
+                    </div>
+                    <div class="grid-detail">
+                        <div class="card">
+                            <h3 class="col-md-6">Misión</h3>
+                            <p>Ofrecer soluciones integrales en productos MRO, brindando acompañamiento técnico
+                                especializado, productos de alta calidad y un servicio al cliente oportuno, que respalde
+                                la continuidad operativa de nuestros clientes industriales.</p>
+                        </div>
+                        <div class="card">
+                            <h3 class="col-md-6">Visión</h3>
+                            <p>Consolidarnos como el aliado estratégico número uno en Colombia en la fabricación y
+                                suministro de tornillería especial, resinas, abrasivos y adhesivos
+                                industriales, reconocidos por nuestra confiabilidad, experiencia y compromiso con la
+                                productividad de nuestros clientes.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- value -->
+    <section id="values">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="container-values">
+                    <div class="title-description">
+                        <span class="badge">Nuestro valores</span>
+                        <h2>Nuestros valores, nuestra forma
+                            de hacer industria</h2>
+                        <p>En Mac Master Importadores trabajamos con integridad, cercanía y excelencia. Nuestros
+                            principios nos definen y guían cada decisión, fortaleciendo la confianza con nuestros
+                            clientes y asegurando un servicio que va más allá de vender productos: se trata de construir
+                            relaciones duraderas y aportar al crecimiento de la industria.</p>
+                    </div>
+                    <div class="values">
+                        <div class="text"><p>Honestidad</p></div>
+                        <div class="text"><p>Amabilidad</p></div>
+                        <div class="text"><p>Respeto</p></div>
+                        <div class="text"><p>Liderazgo</p></div>
+                        <div class="text"><p>Servicio</p></div>
+                        <div class="text"><p>Cumplimiento</p></div>
+                    </div>
+                    <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/02.about/image.png?raw=true" alt="">
                 </div>
             </div>
         </div>
@@ -148,10 +203,10 @@
                         <div class="options">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Inicio</a>
+                                    <a class="nav-link" href="index.html">Inicio</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Quienes Somos</a>
+                                    <a class="nav-link" href="about.html">Quienes Somos</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#">Productos</a>
