--- a/about.html
+++ b/about.html
@@ -111,14 +111,27 @@
                             relaciones duraderas y aportar al crecimiento de la industria.</p>
                     </div>
                     <div class="values">
-                        <div class="text"><p>Honestidad</p></div>
-                        <div class="text"><p>Amabilidad</p></div>
-                        <div class="text"><p>Respeto</p></div>
-                        <div class="text"><p>Liderazgo</p></div>
-                        <div class="text"><p>Servicio</p></div>
-                        <div class="text"><p>Cumplimiento</p></div>
+                        <div class="text">
+                            <p>Honestidad</p>
+                        </div>
+                        <div class="text">
+                            <p>Amabilidad</p>
+                        </div>
+                        <div class="text">
+                            <p>Respeto</p>
+                        </div>
+                        <div class="text">
+                            <p>Liderazgo</p>
+                        </div>
+                        <div class="text">
+                            <p>Servicio</p>
+                        </div>
+                        <div class="text">
+                            <p>Cumplimiento</p>
+                        </div>
                     </div>
-                    <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/02.about/image.png?raw=true" alt="">
+                    <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/02.about/image.png?raw=true"
+                        alt="">
                 </div>
             </div>
         </div>
@@ -159,6 +172,23 @@
                                     cumplimiento.</p>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- team -->
+    <section id="team">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="container-team">
+                    <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/02.about/team.png?raw=true"
+                        alt="">
+                    <div class="grid-images">
+                        <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/02.about/team_1.png?raw=true"
+                            alt="">
+                        <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/02.about/team_2.png?raw=true"
+                            alt="">
                     </div>
                 </div>
             </div>
