--- a/index.html
+++ b/index.html
@@ -337,11 +337,11 @@
 
     <!-- FAB -->
     <div class="fixed-bottom">
-        <button type="button" class="btn"
-            onclick="window.open('https://wa.me/573177899482?text=Hola%2C%20estoy%20interesado%20en%20sus%20productos%20de%20tornillería%20y%20resinas.%20¿Podrían%20brindarme%20más%20información%3F', '_blank')"><img
+        <a href="https://wa.me/573177899482?text=Hola%2C%20estoy%20interesado%20en%20sus%20productos%20de%20tornillería%20y%20resinas.%20¿Podrían%20brindarme%20más%20información%3F"
+            target="_blank" rel="noopener noreferrer" class="btn"><img
                 src="https://github.com/ivankstro7/Cronopioneuro/blob/main/assets/Extended%20FAB.png?raw=true"
                 alt="icono de whatsapp">
-        </button>
+        </a>
     </div>
 
 </body>
