--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
             <div class="collapse navbar-collapse col-lg-6" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Quienes Somos</a>
+                        <a class="nav-link" href="about.html">Quienes Somos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Productos</a>
@@ -54,8 +54,8 @@
     <section id="heroimage">
         <div class="container-fluid">
             <div class="row">
-                <div class="content-hero">
-                    <h1>En Mac Master Importadores
+                <div class="content-hero col-lg-10 offset-lg-1">
+                    <h1 class="col-lg-8 col-xxl-10">En Mac Master Importadores
                         nuestra prioridad es atenderte</h1>
                     <picture>
                         <source media="(min-width:767px)"
@@ -72,7 +72,7 @@
     <section id="mision">
         <div class="container-fluid">
             <div class="row">
-                <div class="container-mision">
+                <div class="container-mision col-lg-10 offset-lg-1 col-xxl-8 offset-xxl-2">
                     <div class="title">
                         <span class="badge">Historia y enfoque</span>
                         <h2>Cómo empezamos y hacia dónde vamos</h2>
@@ -80,13 +80,13 @@
                     <div class="grid-detail">
                         <div class="card">
                             <h3 class="col-md-6">Misión</h3>
-                            <p>Ofrecer soluciones integrales en productos MRO, brindando acompañamiento técnico
+                            <p class="col-md-5">Ofrecer soluciones integrales en productos MRO, brindando acompañamiento técnico
                                 especializado, productos de alta calidad y un servicio al cliente oportuno, que respalde
                                 la continuidad operativa de nuestros clientes industriales.</p>
                         </div>
                         <div class="card">
                             <h3 class="col-md-6">Visión</h3>
-                            <p>Consolidarnos como el aliado estratégico número uno en Colombia en la fabricación y
+                            <p class="col-md-5">Consolidarnos como el aliado estratégico número uno en Colombia en la fabricación y
                                 suministro de tornillería especial, resinas, abrasivos y adhesivos
                                 industriales, reconocidos por nuestra confiabilidad, experiencia y compromiso con la
                                 productividad de nuestros clientes.</p>
@@ -100,17 +100,17 @@
     <section id="values">
         <div class="container-fluid">
             <div class="row">
-                <div class="container-values">
+                <div class="container-values col-lg-10 offset-lg-1 col-xxl-8 offset-xxl-2">
                     <div class="title-description">
                         <span class="badge">Nuestro valores</span>
-                        <h2>Nuestros valores, nuestra forma
+                        <h2 class="col-lg-8">Nuestros valores, nuestra forma
                             de hacer industria</h2>
-                        <p>En Mac Master Importadores trabajamos con integridad, cercanía y excelencia. Nuestros
+                        <p class="col-lg-8">En Mac Master Importadores trabajamos con integridad, cercanía y excelencia. Nuestros
                             principios nos definen y guían cada decisión, fortaleciendo la confianza con nuestros
                             clientes y asegurando un servicio que va más allá de vender productos: se trata de construir
                             relaciones duraderas y aportar al crecimiento de la industria.</p>
                     </div>
-                    <div class="values">
+                    <div class="values col-lg-10 offset-lg-1">
                         <div class="text">
                             <p>Honestidad</p>
                         </div>
@@ -140,17 +140,17 @@
     <section id="about">
         <div class="container-fluid">
             <div class="row">
-                <div class="container-about col-xl-10 offset-xl-1">
-                    <div class="title-description col-lg-10 offset-lg-1">
-                        <div class="heading col-xl-8">
+                <div class="container-about col-md-10 offset-md-1 col-lg-10 offset-lg-1 col-xxl-8 offset-xxl-2">
+                    <div class="title-description">
+                        <div class="heading">
                             <span class="badge">Quienes somos</span>
                             <h2>Puntos clave que definen nuestro éxito</h2>
                         </div>
                     </div>
-                    <div class="grid-stats col-lg-10 offset-lg-1">
+                    <div class="grid-stats">
                         <div class="card">
                             <h3 class="col-md-6">+10 años</h3>
-                            <div class="card-title col-md-5 col-lg-6">
+                            <div class="card-title col-md-5">
                                 <h4>Trayectoria</h4>
                                 <p>Más de una década impulsando
                                     soluciones industriales en todo el país.</p>
@@ -158,7 +158,7 @@
                         </div>
                         <div class="card">
                             <h3 class="col-md-6">500+</h3>
-                            <div class="card-title col-md-5 col-lg-6">
+                            <div class="card-title col-md-5">
                                 <h4>Productos disponibles</h4>
                                 <p>Un catálogo robusto y actualizado para cubrir múltiples necesidades
                                     del sector.</p>
@@ -181,7 +181,7 @@
     <section id="team">
         <div class="container-fluid">
             <div class="row">
-                <div class="container-team">
+                <div class="container-team col-lg-10 offset-lg-1 col-xxl-8 offset-xxl-2">
                     <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/02.about/team.png?raw=true"
                         alt="">
                     <div class="grid-images">
