--- a/index.html
+++ b/index.html
@@ -287,10 +287,10 @@
                         <div class="options">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Inicio</a>
+                                    <a class="nav-link" href="index.html">Inicio</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Quienes Somos</a>
+                                    <a class="nav-link" href="about.html">Quienes Somos</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#">Productos</a>
