--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
     <section id="mision">
         <div class="container-fluid">
             <div class="row">
-                <div class="container-mision col-lg-10 offset-lg-1 col-xxl-8 offset-xxl-2">
+                <div class="container-mision col-md-10 offset-md-1 col-xxl-8 offset-xxl-2">
                     <div class="title">
                         <span class="badge">Historia y enfoque</span>
                         <h2>Cómo empezamos y hacia dónde vamos</h2>
@@ -110,7 +110,7 @@
                             clientes y asegurando un servicio que va más allá de vender productos: se trata de construir
                             relaciones duraderas y aportar al crecimiento de la industria.</p>
                     </div>
-                    <div class="values col-lg-10 offset-lg-1">
+                    <div class="values col-md-10 offset-md-1 col-lg-10 offset-lg-1">
                         <div class="text">
                             <p>Honestidad</p>
                         </div>
