--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
             <div class="collapse navbar-collapse col-lg-6" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">Quienes Somos</a>
+                        <a class="nav-link active" href="about.html">Quienes Somos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Productos</a>
