--- a/about.html
+++ b/about.html
@@ -110,7 +110,7 @@
                             clientes y asegurando un servicio que va más allá de vender productos: se trata de construir
                             relaciones duraderas y aportar al crecimiento de la industria.</p>
                     </div>
-                    <div class="values col-md-10 offset-md-1 col-lg-10 offset-lg-1">
+                    <div class="values col-md-10 offset-md-1 col-lg-10 offset-lg-1 col-xl-8 offset-xl-2">
                         <div class="text">
                             <p>Honestidad</p>
                         </div>
