--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
                         <a class="nav-link" href="#">Productos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contáctenos</a>
+                        <a class="nav-link" href="contact.html">Contáctenos</a>
                     </li>
                 </ul>
             </div>
@@ -242,7 +242,7 @@
                                     <a class="nav-link" href="#">Productos</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Contáctenos</a>
+                                    <a class="nav-link" href="contact.html">Contáctenos</a>
                                 </li>
                             </ul>
                         </div>
