--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
     <nav class="navbar fixed-top navbar-expand-lg col-lg-10 offset-lg-1">
         <div class="container-fluid">
             <div class="container-navbar-brand">
-                <a class="navbar-brand col-lg-6" href="#"><img
+                <a class="navbar-brand col-lg-6" href="index.html"><img
                         src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/01.Logos/logo.png?raw=true"
                         alt="Logo de Mac Master Importadores, expertos en tornillería y soluciones industriales">
                 </a>
@@ -50,6 +50,91 @@
             </div>
         </div>
     </nav>
+    <!-- heading -->
+    <section id="heading">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="title-description col-lg-10 offset-lg-1">
+                    <h1>¿Tienes alguna duda o necesitas asesoría personalizada?</h1>
+                    <P>En Mac Master Importadores estamos listos para ayudarte. Ya sea que necesites información sobre
+                        nuestros productos, asistencia
+                        técnica o una cotización, nuestro equipo estará encantado de atenderte. Escríbenos o llámanos y
+                        te responderemos lo más pronto
+                        posible.</P>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- contact info -->
+    <section id="contact-info">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="content-contact">
+                    <div class="card col-lg-4 col-xxl-6">
+                        <h2>Visitanos</h2>
+                        <div class="card-description">
+                            <p>Av. 5c Nte. #46, Cali, Valle del Cauca, Colombia</p>
+                            <p>Visítenos para consultas y asesoramiento personalizado.</p>
+                        </div>
+                    </div>
+                    <div class="card col-lg-4 col-xxl-3">
+                        <h2>Llámanos</h2>
+                        <div class="card-description">
+                            <p>(57) 317 789 9482</p>
+                            <p>Contáctenos directamente para asistencia inmediata.</p>
+                        </div>
+                    </div>
+                    <div class="card col-lg-4 col-xxl-3">
+                        <h2>Contáctanos</h2>
+                        <div class="card-description">
+                            <p><a href="mailto:proyectos@macmaster.co">proyectos@macmaster.co</a></p>
+                            <p>Comparta sus preguntas o ideas y le responderemos rápidamente.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- form -->
+    <section id="form">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="content-form">
+                    <div class="maps col-12 col-xl-6">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3982.4407944329414!2d-76.52750052432418!3d3.4848443509959193!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e30a9c1750dd6d3%3A0xaa4d4aa4b29e7fb3!2sMAC%20MASTER%20IMPORTADORES%20SAS!5e0!3m2!1sen!2sco!4v1748968896142!5m2!1sen!2sco"
+                            style="border:0;" allowfullscreen="" loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                    <form class="col-xl-6">
+                        <div class="title-description">
+                            <h2>Envíanos un mensaje</h2>
+                            <p class="col-xl-8">¿Tienes alguna consulta específica? Completa el formulario
+                                y uno de nuestros asesores se pondrá en contacto contigo
+                                lo antes posible. Estamos aquí para brindarte soluciones claras y rápidas.</p>
+                        </div>
+                        <div class="inputs">
+                            <div class="col-12">
+                                <label for="exampleFormControlInput1" class="form-label">Nombres Completo</label>
+                                <input type="text" class="form-control" placeholder="Nombre Completo"
+                                    aria-label="First name">
+                            </div>
+                            <div class="col-12">
+                                <label for="exampleFormControlInput1" class="form-label">Correo electrónico</label>
+                                <input type="email" class="form-control" id="exampleFormControlInput1"
+                                    placeholder="correo@example.com">
+                            </div>
+                            <div class="col-12">
+                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
+                                    placeholder="Escribir mensaje"></textarea>
+                            </div>
+                            <button type="submit" class="btn btn-primary">Envíar mensaje</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- footer -->
     <footer id="footer">
         <div class="container-fluid">
@@ -108,7 +193,6 @@
             </div>
         </div>
     </footer>
-
     <!-- FAB -->
     <div class="fixed-bottom">
         <a href="https://wa.me/573177899482?text=Hola%2C%20estoy%20interesado%20en%20sus%20productos%20de%20tornillería%20y%20resinas.%20¿Podrían%20brindarme%20más%20información%3F"
