--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <nav class="navbar fixed-top navbar-expand-lg col-lg-10 offset-lg-1">
         <div class="container-fluid">
             <div class="container-navbar-brand">
-                <a class="navbar-brand col-lg-6" href="#"><img
+                <a class="navbar-brand col-lg-6" href="index.html"><img
                         src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/01.Logos/logo.png?raw=true"
                         alt="Logo de Mac Master Importadores, expertos en tornillería y soluciones industriales">
                 </a>
